--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,6 +4,9 @@ FROM python:3.9-slim
 # Set the working directory in the container
 WORKDIR /app
 
+# Copy the dependencies file to the working directory
+COPY requirements.txt /app
+
 # Install the dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
